k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-ordering-frontend-deployment
  namespace: "2401086"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: food-ordering
  template:
    metadata:
      labels:
        app: food-ordering
    spec:
      imagePullSecrets:
        - name: nexus-secret  

      containers:
        - name: food-ordering
          image: 127.0.0.1:30085/2401086_food/food-ordering:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
              ephemeral-storage: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
