k8s/depolyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-ordering-deployment
  namespace: "2401086"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: food-ordering
  template:
    metadata:
      labels:
        app: food-ordering
    spec:
      containers:
        - name: food-ordering
          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401086/food-ordering:v1
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: nexus-secret
