k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-ordering-service
  namespace: food-ordering
spec:
  selector:
    app: food-ordering
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
